# WAScribe

./: .gitignore  Image SEO SuperName.md  README.md  image_seo_supername.py  pyproject.toml
src/wascribe/: cli.py  transcriber.py  utils.py
tests/: chat_transcriber.py  quick_test.py  test_diarization.py
tests/data/: Chat de WhatsApp con Hernan Dario Escobar.txt
